--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,10 +23,16 @@ Layout/LineLength:
 Metrics/AbcSize:
   Max: 50
 
+Metrics/BlockLength:
+  Max: 50
+
 Metrics/ClassLength:
   Max: 500
 
 Metrics/CyclomaticComplexity:
+  Max: 20
+
+Metrics/PerceivedComplexity:
   Max: 20
 
 Metrics/MethodLength:
